# lanbao_cq_ws

./: .gitignore  AGENTS.md  CLAUDE.md  docker-compose.yml  gemma_docker  prometheus.yml
docker/: Dockerfile.gemma4-transformers  Dockerfile.vllm-gemma4  entrypoint.sh  gemma4-server.py  nginx-mcp.conf  openssl-feishu.cnf
docs/superpowers/plans/: 2026-06-05-research-app.md
docs/superpowers/specs/: 2026-06-05-research-app-design.md
eastmoney-mcp/: Dockerfile  README.md
eastmoney-mcp/src/: .env.example  .gitignore  MIGRATION_SUMMARY.md  README.md  SKILL.md  TEST_REPORT.md  install.sh  mcp-config.json  pyproject.toml  test_api.py  verify.sh
eastmoney-mcp/src/src/eastmoney_mcp/: __init__.py  api.py  cli.py  models.py  monitor.py  server.py
mcp/: Dockerfile  ak.ipynb  mcp_client.py  my_server.py  pyproject.toml
research-app/backend/: config.py  main.py  models.py  requirements.txt
research-app/backend/routers/: prompts.py  tasks.py
research-app/backend/services/: hermes_service.py  yaml_service.py
research-app/backend/tests/: test_prompts_api.py  test_tasks_api.py  test_yaml_service.py
research-app/data/: prompts.yaml
research-app/frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
research-app/frontend/src/: App.tsx
research-app/frontend/src/components/: Header.tsx  HistoryDrawer.tsx  MarketTabs.tsx  PromptCard.tsx  ResultPanel.tsx
research-app/frontend/src/lib/: api.ts  utils.ts
research-app/frontend/src/types/: index.ts
scripts/: requirements-test.txt  test_eastmoney_mcp.py
